[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/NPC/NPC.gd" type="Script" id=1]
[ext_resource path="res://asset/sound/Woman_Attacked.wav" type="AudioStream" id=2]
[ext_resource path="res://asset/sound/Sword_Swish.wav" type="AudioStream" id=3]
[ext_resource path="res://asset/monkey/sword_slash_sheet.png" type="Texture" id=4]
[ext_resource path="res://asset/combo_magic_sheet.png" type="Texture" id=5]
[ext_resource path="res://asset/monkey/monke_hit_sheet.png" type="Texture" id=6]
[ext_resource path="res://asset/monkey/monkey_attack_sheet.png" type="Texture" id=7]
[ext_resource path="res://src/Abilities/Sheild.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Abilities/HealthBar.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]

resource_name = "hit"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("projectile:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]

length = 1.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 31 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 30 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("projectile:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 12 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("projectile:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -71.7111, -54.0978 ), Vector2( -359.69, -371.293 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("projectile:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("projectileHit:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9, 1.3, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("projectileHit:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -429.228, -417.137 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("projectileHit:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.9, 1.3, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 14, 14 ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 34.8636, 14.624 )

[node name="Monkey" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="audio_hit" type="AudioStreamPlayer2D" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="audio" type="AudioStreamPlayer2D" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="projectile" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( -359.69, -371.293 )
rotation = -0.786903
texture = ExtResource( 4 )
hframes = 13
frame = 12
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="projectileHit" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( -429.228, -417.137 )
texture = ExtResource( 5 )
hframes = 15
frame = 14
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="anim" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hit = SubResource( 1 )
anims/idle = SubResource( 2 )
blend_times = [  ]

[node name="Sprite" type="Sprite" parent="." index="5"]

texture = ExtResource( 7 )
hframes = 31
frame = 30
_sections_unfolded = [ "Animation" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="6"]

position = Vector2( 57.5271, 83.9978 )
shape = SubResource( 3 )

[node name="Sheild" parent="." index="7" instance=ExtResource( 8 )]

visible = false
position = Vector2( 64.7381, 8.54478 )

[node name="CollisionShape2D" parent="Sheild/sheild" index="0"]

position = Vector2( -28.1041, -1.3135 )

[node name="HealthBar" parent="." index="8" instance=ExtResource( 9 )]

position = Vector2( 19.7306, -134.124 )

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]

[connection signal="animation_started" from="anim" to="." method="_on_anim_animation_started"]


[editable path="Sheild"]
